nginx/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "nginx.tosukui.xyz"
    tls:
      mode: SIMPLE
      credentialName: letsencrypt-staging # This should match the Certificate secretName
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - "nginx.tosukui.xyz"
  gateways:
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 8000
