nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress2
  namespace: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.tosukui.xyz
      http:
        paths:
        - backend:
            service:
              name: nginx
              port:
                number: 8000
          path: /
          pathType: Prefix
